--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.connection.charSet=UTF-8
-spring.jpa.hibernate.hbm2ddl.auto = create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
